--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   draw_your_image: ^0.2.0
   flutter_login: ^4.1.1
+  http: ^0.13.5
+  test: ^1.9.4
+  #shared_preferences: ^2.0.6
+
   flutter:
     sdk: flutter
 
