--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 dependencies:
   draw_your_image: ^0.2.0
   flutter_login: ^4.1.1
+  socket_io_client: ^2.0.2
   http: ^0.13.5
   test: ^1.9.4
+  web_socket_channel: ^2.4.0
   #shared_preferences: ^2.0.6
 
   flutter:
